[gd_scene load_steps=4 format=3 uid="uid://duwpkeop6bhdk"]

[ext_resource type="Texture2D" uid="uid://twalv4bahnlq" path="res://World/Chest/chest.png" id="1_c1fqh"]
[ext_resource type="Script" path="res://World/Chest/treasure_chest.gd" id="1_oq0vb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgn8d"]
size = Vector2(10, 7)

[node name="TreasureChest" type="Node2D"]
script = ExtResource("1_oq0vb")

[node name="ChestSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_c1fqh")
centered = false
offset = Vector2(0, -16)
hframes = 2

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(8, -6)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hgn8d")
